# maps

./: .gitignore  02 - Comunas de Ciudad Autónoma de Buenos Aires.json  02_Comunas_de_Ciudad_Autonoma_de_Buenos_Aires.json  10 - Departamentos de Catamarca.json  14 - Departamentos de Córdoba.json  22 - Departamentos de Chaco.json  26 - Departamentos de Chubut.json  26_Departamentos_de_Chubut.json  30 - Departamentos de Entre Ríos.json  34 - Departamentos de Formosa.json  34_Departamentos_de_Formosa.json  42 - Departamentos de La Pampa.json  46 - Departamentos de La Rioja.json  46_Departamentos_de_La_Rioja.json  50 - Departamentos de Mendoza.json  50_Departamentos_de_Mendoza.json  54 - Departamentos de Misiones.json  54_Departamentos_de_Misiones.json  58 - Departamentos de Neuquén.json  58_Departamentos_de_Neuquen.json  62 - Departamentos de Río Negro.json  62_Departamentos_de_Rio_Negro.json  66 - Departamentos de Salta.json  70 - Departamentos de San Juan.json  70_Departamentos_de_San_Juan.json  74 - Departamentos de San Luis.json  74_Departamentos_de_San_Luis.json  78 - Departamentos de Santa Cruz.json  78_Departamentos_de_Santa_Cruz.json  86 - Departamentos de Santiago del Estero.json  86_Departamentos_de_Santiago_del_Estero.json  94 - Departamentos de Tierra del Fuego.json  A1 - Partidos y comunas de AMBA.json  A2 - Partidos del conurbano.json  B1_Buenos_Aires_seccion_electoral_primera.json  B2 - Buenos Aires sección electoral segunda.json  B2_Buenos_Aires_seccion_electoral_segunda.json  B3 - Buenos Aires sección electoral tercera.json  (+18 more)
utils/: BAHRA.csv  (+2 more)
