[tool.poetry]
name = "maps"
version = "0.1.0"
description = ""
authors = ["leantroca <leantroca@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.10.2"
Shapely = "^1.8.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
